# yaycazz

./: .gitmodules  Anchor.toml  readme.md
programs/yaycazz/: Cargo.toml
programs/yaycazz/src/: error.rs  lib.rs
programs/yaycazz/src/constants/: mod.rs
programs/yaycazz/src/helpers/: mod.rs
programs/yaycazz/src/instructions/: mod.rs
programs/yaycazz/src/instructions/amm/: deposite.rs  initialize.rs  mod.rs  swap.rs  withdraw.rs
programs/yaycazz/src/instructions/event/: create_event.rs  create_wizzard.rs  define_tokenomics.rs  distribute_tokenomics_direct.rs  distribute_tokenomics_provider.rs  mint.rs  mod.rs  select_approvement.rs  set_event_property.rs
programs/yaycazz/src/state/: config.rs  event.rs  mod.rs  register.rs  wizzard.rs
tests/: yaycazz.ts
yaycazz-frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
yaycazz-frontend/public/: metadata.json
yaycazz-frontend/src/: App.vue  main.ts  style.css
yaycazz-frontend/src/components/: Create.vue  Home.vue  LbPairCard.vue  LbPairDetail.vue  LbPairList.vue  ListPDA.vue  Mission.vue  PoolDetail.vue  PoolList.vue  Tokenomics.vue
yaycazz-frontend/src/libs/: idl.ts  useWorkspace.ts  yaycazz.ts
