[package]
name = "yaycazz"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yaycazz"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0" , features = ['init-if-needed']}
anchor-spl = {version = "0.29.0"}
constant-product-curve = {git = "https://github.com/deanmlittle/constant-product-curve"}
solana-program = "=1.17.3"
ahash = "=0.8.4"